# python_project

./: README.md
Requirements/: Requirements_txt_File  requirements.txt
question1_university_system/: Course.py  Department.py  main.py
question2_social_media_analysis/: main.py  pyproject.toml
question2_social_media_analysis/analysis/: statistical_analysis.py
question2_social_media_analysis/data_collection/: rss_parser.py  scrape_books.py  scrape_demo_sites.py
question2_social_media_analysis/data_processing/: cleaning_pipeline.py
question2_social_media_analysis/models/: regression.py
question2_social_media_analysis/src/data_collection/data/: cleaned_books.csv  raw_books.csv  raw_tablets.csv  rss_feed.csv
question2_social_media_analysis/visualizations/: plots.py
question3_ethics_report/: healthcare_ethics_report.md
requirements.txt/: requirements.txt
